# immunefi-smart-contract-parser

./: Cargo.toml  README.md  keys.json
src/: main.rs
src/parser/: apidb.rs  mod.rs  models.rs
