[package]
name = "iscp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  
opt-level = "z" 
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
reqwest = "0.11.20"
serde_json = "1.0.107"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.9.5"